--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/153d74e558.js" crossorigin="anonymous"></script>
 
     <!-- custom css-->
-    <link rel="stylesheet" href="../public/css/profile.css" />
+    <link rel="stylesheet" href="../../public/css/profile.css" />
     <title>Book Directory App</title>
   </head>
   <body>
