--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -12,7 +12,7 @@
     ></script>
 
     <!-- custom css -->
-    <link rel="stylesheet" href="../css/register.css" />
+    <link rel="stylesheet" href="../../public/css/register.css" />
     <title>Register</title>
   </head>
   <body>
