Add existing file

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -28,7 +28,7 @@
       <form class="login" action="/api/users/login" method="post">
         <div class="login-form-input">
           <label for="">Email</label>
-          <input type="text" name="" id="" />
+          <input type="text" name="email"/>
         </div>
 
         <div class="login-form-input">
